# rodent

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindOpenImageDenoise.cmake
network/: bias1.txt  bias10.txt  bias11.txt  bias12.txt  bias13.txt  bias14.txt  bias15.txt  bias16.txt  bias2.txt  bias3.txt  bias4.txt  bias5.txt  bias6.txt  bias7.txt  bias8.txt  bias9.txt  conv1.txt  conv10.txt  conv11.txt  conv12.txt  conv13.txt  conv14.txt  conv15.txt  conv16.txt  conv2.txt  conv3.txt  conv4.txt  conv5.txt  conv6.txt  conv7.txt  conv8.txt  conv9.txt
network/oidn_dump/: dec_conv0.bias.txt  dec_conv0.weight.txt  dec_conv1a.bias.txt  dec_conv1a.weight.txt  dec_conv1b.bias.txt  dec_conv1b.weight.txt  dec_conv2a.bias.txt  dec_conv2a.weight.txt  dec_conv2b.bias.txt  dec_conv2b.weight.txt  dec_conv3a.bias.txt  dec_conv3a.weight.txt  dec_conv3b.bias.txt  dec_conv3b.weight.txt  dec_conv4a.bias.txt  dec_conv4a.weight.txt  dec_conv4b.bias.txt  dec_conv4b.weight.txt  enc_conv0.bias.txt  enc_conv0.weight.txt  enc_conv1.bias.txt  enc_conv1.weight.txt  enc_conv2.bias.txt  enc_conv2.weight.txt  enc_conv3.bias.txt  enc_conv3.weight.txt  enc_conv4.bias.txt  enc_conv4.weight.txt  enc_conv5a.bias.txt  enc_conv5a.weight.txt  enc_conv5b.bias.txt  enc_conv5b.weight.txt
src/: CMakeLists.txt
src/core/: common.impala  cpu_common.impala
src/driver/: converter.cpp  denoise.cpp  denoise.h  denoiser.cpp  denoiser.h  driver.cpp  interface.cpp
src/driver/denoiser/: activation.art  convolution.art  cublas.cpp  interface.art  interface.h  iterate.art  kernel.art  mappings.art  matrix.art  mkl_cblas.cpp  nn.art  nn.cpp  nn.h  nn_io.cpp  nn_io.h  own_engine_mm.art  pool_upsmp.art  utility.art
src/render/: driver.impala  mapping_cpu.impala  mapping_gpu.impala  material.impala  renderer.impala
testing/: cornell_box.mtl
tools/: CMakeLists.txt
tools/bench_aila/: CMakeLists.txt
tools/bench_convolution/: CMakeLists.txt  bench_all.sh  bench_convolution.art  bench_convolution.cpp  bench_interface.h  debug_helpers.art
tools/bench_convolution/dumped_data/denoising_1kx1k/: alb_mat.txt  img_mat.txt  nrm_mat.txt  ref_mat.txt
tools/bench_convolution/dumped_data/denoising_512x512/: ref_mat.txt
tools/bench_convolution/dumped_data/denoising_fw/: alb_mat.txt  img_mat.txt  nrm_mat.txt
tools/bench_convolution/dumped_data/im2col/: in_mat.txt  out_mat.txt
tools/bench_convolution/dumped_data/sres_1k/: ref_mat.txt
tools/bench_convolution/dumped_data/sres_256/: ref_mat.txt
tools/bench_convolution/dumped_data/sres_512/: img_mat.txt
tools/bench_convolution/dumped_data/sres_matmul/: conv4_in.txt  conv4_out.txt  uc1bias.txt  upconv1.txt
tools/bench_convolution/dumped_data/sres_network/: c1bias.txt  c2bias.txt  c3bias.txt  c4bias.txt  c5bias.txt  conv1.txt  conv2.txt  conv3.txt  conv4.txt  conv5.txt  conv6.txt  uc1bias.txt  upconv1.txt
tools/bench_shading/: bench_shading.cpp  bench_shading.impala
tools/benchmarks/: bench_oidn_results.txt
